--- a/incs/js.html
+++ b/incs/js.html
@@ -75,7 +75,7 @@ $(document).ready(function() {
 });*/
 
 $(document).ready(function() {
-	$("[data-fancybox='modal']").fancybox({
+	$("[data-fancybox='modal'], .fancybox").fancybox({
 		toolbar  : false,
 		margin : [1, 0],
 		infobar : false,
